# Blynk-NCP-Example-Zephyr

./: .clang-format  .gitignore  .gitmodules  README.md
.github/workflows/: build.yaml  check-format.yaml
blynk_ncp/: Kconfig.blynk_ncp  Makefile
blynk_ncp/include/blynk_ncp/: blynk_ncp.h  blynk_rpc_config.h
blynk_ncp/src/: zephyr_lib.c  zephyr_ota.c  zephyr_uart.c
docs/: Troubleshooting.md  _samples_template.md
docs/flashing_ncp/: Adafruit_AirLift_FeatherWing.md  Adafruit_AirLift_Shield.md  Pico_ESP8266.md  Witty_Cloud.md
docs/samples/: _template.md
docs/samples/basic/: Adafruit_Feather_STM32F405_with_AirLift.md  Raspberry_Pi_Pico_with_ESP8266_Shield.md  ST_Nucleo_L4R5ZI_with_AirLift.md  WeAct_Black_Pill_with_Witty_Cloud.md
docs/samples/without_ota/: Adafruit_Feather_M0_Basic_with_AirLift.md  Arduino_DUE_with_AirLift.md  Arduino_UNO_R4_Minima_with_AirLift.md
samples/basic/: CMakeLists.txt  Kconfig  build.sh  prj.conf
samples/basic/boards/: adafruit_airlift.conf  adafruit_feather_m0_basic_proto.conf  adafruit_feather_m0_basic_proto.overlay  adafruit_feather_stm32f405.overlay  blackpill_f411ce.overlay  nucleo_f746zg.overlay  nucleo_f767zi.overlay  nucleo_l4r5zi.overlay  rpi_pico.overlay  stm32f072b_disco.conf  stm32f072b_disco.overlay  witty_cloud.conf
samples/basic/src/: main.c
samples/basic/sysbuild/: mcuboot.conf  mcuboot_stm32f072b_disco.conf
samples/without_ota/: CMakeLists.txt  Kconfig  build.sh  prj.conf
samples/without_ota/boards/: adafruit_feather_m0_basic_proto.conf  adafruit_feather_m0_basic_proto.overlay  arduino_due.overlay  arduino_uno_r4_minima.conf  arduino_uno_r4_minima.overlay  stm32f030_demo.conf  stm32f030_demo.overlay
samples/without_ota/src/: main.c
test/: config  run.sh
test/boards/nucleo_l4r5zi/: flash_board  flash_slot1  mass_erase  supported_tests
test/tests/: loopback  mcuboot  online  ota  uptime
test/utils/: set_src_ver  wait_mcu_ping  wait_online
tests/: apply_format.sh  codespell.cfg  config  run.sh  west_main.yaml  west_v3.5.0.yaml
tests/tests/: loopback  mcuboot  offline  online  ota
tests/utils/: get_ver  mcu_ping  set_src_creds  set_src_ver  wait_offline  wait_online
